:sparkles: attempt to parse a dbsnp file

--- a/notebooks/exploratory/0.3-bunop-sheep-coordinates-and-ensembl.ipynb
+++ b/notebooks/exploratory/0.3-bunop-sheep-coordinates-and-ensembl.ipynb
@@ -210,7 +210,11 @@
    "metadata": {},
    "source": [
     "The coordinates are different: sometimes they are equal to SNPchimp, sometimes with illumina chip. Sometimes there are totally different. I think that it depends on the dbSNP version used for build or the align method in general.\n",
-    "When both SNPchimp and Illumina chip doesn't have coordinates, the SNP has a multiple aligment"
+    "When both SNPchimp and Illumina chip doesn't have coordinates, the SNP has a multiple aligment\n",
+    "\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "    <b>Danger:</b> <code>rs408606108</code>, for example, failed the alignment with ensembl since the <code>C/T</code> allele doesn't match the reference genome (which is <code>T</code>). In EVA this snps is deprecated in Oarv4.0. Does this applies to any others SNPs? are they BOT/reverse? need to validate all SNPs data\n",
+    "</div>"
    ]
   }
  ],
